--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
              embedded
              arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-entity gltf-model="./assets/murderhornet.glb" rotation="0 180 0" scale="1.0 1.0 1.0" gps-entity-place="longitude: -96.014093; latitude: 41.153364;"/>
+        <a-entity gltf-model="./assets/murderhornet.glb" rotation="0 0 0" scale="10.0 10.0 10.0" gps-entity-place="longitude: -96.01409347; latitude: 41.153363503;"/>
 
         <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
