--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a-text value="This content will always face you."
                 look-at="[gps-camera]"
                 scale="120 120 120"
-                gps-entity-place="latitude: 41.157223; longitude: -96.015023;"></a-text>
+                gps-entity-place="latitude: 41.15720259671805; longitude: -96.01390169699364;"></a-text>
         <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
 </body>
