--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a-text value="This content will always face you."
                 look-at="[gps-camera]"
                 scale="120 120 120"
+                position="0 6 -40"
                 gps-entity-place="latitude: 41.15720259671805; longitude: -96.01390169699364;"></a-text>
         <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
