--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,8 @@
     <a-scene vr-mode-ui="enabled: false"
              embedded
              arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
-        <a-camera gps-camera rotation-reader>
+        <a-camera gps-camera="minDistance: 20;" rotation-reader="" camera="" position="" rotation="" look-controls="" wasd-controls="">
         </a-camera>
+
     </a-scene>
 </body>
