--- a/index3.html
+++ b/index3.html
@@ -19,6 +19,7 @@
     <a-scene vr-mode-ui="enabled: false"
              embedded
              arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
+        <a-entity gps-entity-place="latitude: 41.15720057726485; longitude: -96.01410420377427;" gltf-model="./assets/unmc.glb" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15" />       
         <a-camera gps-camera="minDistance: 20;" rotation-reader="" camera="" position="" rotation="" look-controls="" wasd-controls="">
         </a-camera>
 
